Sun Nov 11 03:16:35 2007  Jiri (George) Lebl <jirka@5z.com>

	* cs.po: update

2007-11-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation.

Sun Oct 07 12:38:34 2007  Jiri (George) Lebl <jirka@5z.com>

	* cs.po: update, only 4 untranslated messages

2007-10-07  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation.

2007-09-29  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation

2007-07-27  Raivis Dejus  <orvils@gmail.com>

        * lv.po: Added Latvian Translation.

2007-06-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Bruno Brouard, Stéphane
	Raimbault and Rémi Le Lijour. Added plural forms.

2007-06-15  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation

2007-05-15  Jorge Gonzalez <jorgegon@svn.gnome.org>

        * es.po: Updated Spanish translation

2007-04-21  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2007-04-14  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2007-03-28  Pema Geyleg <pema.geyleg@gmail.com>

	* dz.po: Updated dzongkha translation.

2007-02-08  David Lodge <dave@cirt.net>

	* en_GB.po: Updated English (British) translation

Fri Feb 02 10:08:57 2007  Jiri (George) Lebl <jirka@5z.com>

	* cs.po: update

2007-01-24  Pema Geyleg  <pema.geyleg@gmail.com>

	* dz.po: Added Dzongkha Translation.

2007-01-24  David Lodge <dave@cirt.net>

	* en_GB.po: Updated English (British) translation

2006-12-11  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation.

2006-11-18  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Added Arabic Translation.
	* LINGUAS: Added ar.

2006-09-25  Pawan Chitrakar  <pchitrakar@gmail.com>

	* ne.po: Updated Nepali Translation

2006-09-13  David Lodge <dave@cirt.net>
