@@ -12,9 +12,26 @@ src/gnome-genius.desktop.in
 src/graphing.c
 src/matop.c
 src/mpwrap.c
+src/parse.c
 src/plugin.c
 src/symbolic.c
 src/testplugin.c
 src/util.c
 ve/glade-helper.c
 ve/ve-nongnome.c
+gtkextra/gtkplot.c
+gtkextra/gtkplot3d.c
+gtkextra/gtkplotarray.c
+gtkextra/gtkplotbar.c
+gtkextra/gtkplotbox.c
+gtkextra/gtkplotcanvas.c
+gtkextra/gtkplotcanvasellipse.c
+gtkextra/gtkplotcanvaspixmap.c
+gtkextra/gtkplotcanvasrectangle.c
+gtkextra/gtkplotcanvastext.c
+gtkextra/gtkplotcsurface.c
+gtkextra/gtkplotdata.c
+gtkextra/gtkplotflux.c
+gtkextra/gtkplotpixmap.c
+gtkextra/gtkplotpolar.c
+gtkextra/gtkplotsurface.c
