@@ -1,3 +1,7 @@
+Sun Nov 11 03:49:49 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* POTFILES.in: update
+
 Sun Nov 11 03:16:35 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* cs.po: update
